[Refactor] No longer depends on slf4 nor JaVers, reducing jar size. Comparison of Potentials in the PotentialEditPanel now happens via a custom-made reflection comparator instead of via JaVers's. [Bugfix, UX] When right-clicking on a node or a link the selection is still retained. In the past, when right-clicking a node or link the current selection would be erased and the node or link will be marked as selected. This is issue 614. [Bugfix] MoveNodeEdit now updates the temporal coordinates, which caused herratic behavior when undoing and redoing MoveNodeEdits. [Bugfix] All visual elements coordinates for "getShape" start on the left top corner, instead of the center. This should have always been this way, as Java's shapes do not start from the center, which causes many inconsistencies in the code and some bugs, as most graphic framework start from the left top corner (which is the case for Java Swing). This is issue 613. [UX] Added alignment options when multiple nodes are selected, allowing to center them on the X or Y axis. This is issue 606. [Bugfix] The InferenceOptions dialog now only marks the network as modifed when the Inference Options have truly changed, which is when either the Criterion or the Multicriteria Options have been changed. This is issue 612.